Add common ajax return processing. Add folder subscription